# ninice

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  sonar-project.properties
.github/: dependabot.yml
.github/actions/audit/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  dependency-review.yml
docs/superpowers/plans/: 2026-05-14-ci-yml-best-practices.md  2026-05-14-ninice-domain-stubs.md
docs/superpowers/specs/: 2026-05-14-ci-yml-best-practices-design.md  2026-05-14-ninice-domain-model-stubs-design.md
src/: lib.rs  main.rs
src/channels/: mod.rs  model.rs  service.rs
src/notifications/: mod.rs  model.rs  repository.rs  service.rs
src/recipients/: mod.rs  model.rs  repository.rs  service.rs
src/sequences/: mod.rs  model.rs  repository.rs  service.rs
src/tenants/: mod.rs  model.rs
tests/: greeting.rs
