[package]
name = "ninice"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "TODO one-sentence crate description"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thatsnotmynameio/ninice"

[dependencies]
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"

[lints.rustdoc]
missing_crate_level_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
redundant_clone = "warn"
let_underscore_must_use = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
wildcard_imports = "warn"
semicolon_if_nothing_returned = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
